--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-  font-family: Helvetica;
+  font-family: Tahoma;
   font-size: 14px;
+  color: #444436;
 }
 
 .post {
-  background-color: #eeeeee;
+  background-color: #eeeef6;
   padding: 10px;
   margin: 10px;
 }
